--- a/index.html
+++ b/index.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <!-- Viewport Meta tag added -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/index.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <title>My Portfolio</title>
 </head>
+
 <body>
-    
+    <header class="name-header">
+        <h1>Juan Calixto</h1>
+        <nav class="header-nav">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="projects.html">Projects</a>
+        </nav>
+    </header>
+
+    <section class="info-container">
+        <img class="about-me-image" src="https://picsum.photos/400/400" alt="A picture of myself" />
+        <div class="info">
+            <h2>Juan Calixto</h2>
+            <a href="projects.html">My Projects</a>
+            <p>
+                I come from an IT background of mostly hardware troubleshooting. I
+                started playing with simple code (HTML and CSS) and it fascinated me
+                to a point of where I wanted to learn more and decided Lambda School
+                will be the perfect place to learn and level up my career.
+            </p>
+        </div>
+    </section>
+
+    <section class="my-projects">
+        <div>
+            <img src="https://picsum.photos/200/200" alt="project image 1" />
+            <p>Project 1</p>
+        </div>
+        <div>
+            <img src="https://picsum.photos/200/200" alt="project image 2" />
+            <p>Project 2</p>
+        </div>
+        <div>
+            <img src="https://picsum.photos/200/200" alt="project image 3" />
+            <p>Project 3</p>
+        </div>
+        <div>
+            <img src="https://picsum.photos/200/200" alt="project image 4" />
+            <p>Project 4</p>
+        </div>
+        <div>
+            <img src="https://picsum.photos/200/200" alt="project image 5" />
+            <p>Project 5</p>
+        </div>
+        <div>
+            <img src="https://picsum.photos/200/200" alt="project image 6" />
+            <p>Project 6</p>
+        </div>
+        <div>
+            <img src="https://picsum.photos/200/200" alt="project image 7" />
+            <p>Project 7</p>
+        </div>
+        <div>
+            <img src="https://picsum.photos/200/200" alt="project image 8" />
+            <p>Project 8</p>
+        </div>
+    </section>
+
+    <footer>
+        <section class="contact-me">
+            <p>Like what you see?</p>
+            <a href="contact.html">Contact Me</a>
+        </section>
+        <section class="social">
+            <a href="https://www.linkedin.com/in/juancalixtomorales/" class="fa fa-linkedin" target="_blank"></a>
+            <a href="https://github.com/JuanCalixto" class="fa fa-github" target="_blank"></a>
+        </section>
+    </footer>
 </body>
+
 </html>
